# invocationAPI

./: .gitignore  README.md
src/: CMakeLists.txt  build.sh  jni_loader.c  jni_sys_loader.c  main.c
src/include/: datatypes.h  defs.h  jnienv.h  macros.h
src/make/: Android.mk
